--- a/styles/main.css
+++ b/styles/main.css
@@ -7,3 +7,159 @@ ul {
     background-color:forestgreen;
 
 }
+#be
+{
+    float: left;
+    font-size: 20px;
+    font-style: italic;
+    text-align: left;
+    margin-left: 10px;
+}
+
+#contact
+{
+    float: right;
+    font-size: 20px;
+    font-style: italic;
+    text-align: left;
+    margin-right: 10px;
+}
+#footer
+{
+    width:99%;
+    background-color: rgba(246, 246, 249, 0.4);
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    right: 0;
+    left: 0;
+    bottom: 0;
+
+}
+#socials
+{
+    float: left;
+    width: 485px;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    height: 125px;
+    padding: 10px;
+    /*border: solid 1px;*/
+    /*text-align: center;*/
+    position: static;
+
+}
+#yt
+{
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*border: solid 1px black;*/
+    margin-right: auto;margin-left: 20px;
+    transition:background-color 3s,  color 3s, transform 3s;
+
+}
+#yt:hover
+{
+    background-color: #CC181E;
+    color: white;
+    transform: rotate(360deg);
+}
+a.linksocial
+{
+    color: black;
+    text-decoration: none;
+}
+#fc
+{
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*border: solid 1px black;*/
+    margin-right: auto;margin-left: 20px;
+    transition:background-color 3s,  color 3s, transform 3s;}
+#fc:hover
+{
+    background-color: #3B5998;
+    color: white;
+    transform: rotate(360deg);
+}
+
+#gplus
+{
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*border: solid 1px black;*/
+    margin-right: auto;margin-left: 20px;
+    transition:background-color 3s,  color 3s, transform 3s;
+}
+#gplus:hover
+{
+    background-color: #dd4b39;
+    color: white;
+    transform: rotate(360deg);
+}
+#ins
+{
+    float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*border: solid 1px black;*/
+    margin-right: auto;margin-left: 20px;
+    transition:background-color 3s,  color 3s, transform 3s;
+
+}
+#ins:hover
+{
+    background-color: #405de6;
+    color: white;
+    transform: rotate(360deg);}
+
+#mail
+{
+    float: right;
+    width: 145px;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    height: 125px;
+    padding: 10px;
+    /*border: solid 1px;*/
+    /*text-align: center;*/
+    position: static;
+}
+#gmail
+{
+    float: right;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    /*border: solid 1px black;*/
+    margin-right: 20px;margin-left: auto;
+    transition:background-color 3s,  color 3s, transform 3s;
+}
+#gmail:hover
+{
+    background-color: #CC181E;
+    color: white;
+    transform: rotate(360deg);
+}
+
+#credits
+{
+    height: 100px;
+    display: inline;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.55);
+    color: #fff;
