--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,47 @@
 body
 {
     background-color: #f5f5f8;
+
 }
 
 ul {
     background-color:forestgreen;
 
 }
+/*PATRYK*/
+
+#intro
+{
+    background-image: url(../images/header-background.jpg);
+    background-size: 100%;
+    min-height: 400px;
+    max-height: 500px;
+}
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    zoom: 300%;
+    transform: rotate(-8deg);
+
+}
+
+.slogan {
+    display: block;
+    width: 60%;
+    margin: 10px auto auto;
+    line-height: 33px;
+    font-weight: 400;
+    text-align: center;
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.48);
+    font-family: Lato, sans-serif ;
+    color: #fff;
+    font-size: 30px;
+
+}
+/*PATRYK*/
+
 #be
 {
     float: left;
@@ -152,8 +187,7 @@ a.linksocial
     transform: rotate(360deg);
 }
 
-#credits
-{
+#credits {
     height: 100px;
     display: inline;
     position: absolute;
@@ -163,3 +197,4 @@ a.linksocial
     text-align: center;
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
+}
