--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,6 @@ li {
     transition: 1s transform 5ms;
 }
 
-}
 
 .floating-clear {
     clear: both;
@@ -40,6 +39,33 @@ li {
 
 li a:hover {  transform: scale(1.5);  }
 
+.inputemail {
+    width: 200px;
+    height: 20px;
+}
+
+.myButton {
+    background-color:#44c767;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #18ab29;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:17px;
+    padding:13px 21px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+    background-color:#5cbf2a;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
 
 
 /*PATRYK*/
