lista do nawigacji/ nazwy listy/kolor listy/ zmiana zmiana dotyczy navigation bar/hover scale usunicie features zmiana div na nav

--- a/styles/main.css
+++ b/styles/main.css
@@ -64,15 +64,19 @@ body
     clear: both;
 }
 
+.navigation-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 .navigationul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color:forestgreen;
-    position: fixed;
-    top: 0;
-    width: 100%;
 }
 
 li {
