--- a/styles/main.css
+++ b/styles/main.css
@@ -183,29 +183,30 @@ li a:hover {  transform: scale(1.5);  }
 #footer
 {
     width:99%;
-    background-color: rgba(246, 246, 249, 0.4);
+    background-color: rgba(230, 230, 230, 0.4);
     margin-left: auto;
     margin-right: auto;
-    height: 300px;
+    /*height: 300px;*/
     text-align: center;
     padding: 20px;
-    position: relative;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    /*position: relative;*/
+    /*right: 0;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
 
 }
 #socials
 {
     float: left;
-    width: 485px;
+    width: 100%;
     /*margin-left: auto;*/
     /*margin-right: auto;*/
-    height: 125px;
+    /*height: 125px;*/
     padding: 10px;
     /*border: solid 1px;*/
     /*text-align: center;*/
-    position: static;
+    /*position: static;*/
+
 
 }
 #yt
@@ -289,7 +290,7 @@ a.linksocial
     padding: 10px;
     /*border: solid 1px;*/
     /*text-align: center;*/
-    position: static;
+    /*position: static;*/
 }
 #gmail
 {
@@ -309,14 +310,13 @@ a.linksocial
 }
 
 #credits {
-    height: 100px;
-    display: inline;
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    min-height: 100px;
+    /*display: inline;*/
+    /*position: absolute;*/
+    /*right: 0;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
     text-align: center;
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
->>>>>>> origin/master
 }
