--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,6 @@ body
     clear: both;
 }
 
-<<<<<<< HEAD
 /*.team-members {*/
     /*width: 300px;*/
     /*background-color: #3B5998;*/
@@ -81,7 +80,7 @@ body
     /*clear: both;*/
 /*}*/
 
-=======
+
 .navigation-nav {
     position: fixed;
     top: 0;
@@ -89,7 +88,7 @@ body
     right: 0;
     z-index: 1;
 }
->>>>>>> origin/master
+
 
 .navigationul {
     list-style-type: none;
@@ -155,10 +154,10 @@ li a:hover {  transform: scale(1.5);  }
 
 
 /*PATRYK*/
-/*INTRO CZYLI TLO, OBRAZEK, ZALOZENIE - PRZYCIEMNIANY I ROZJASNIANY*/
 #intro
 {
-    background-image: url(../images/background/1.jpg);
+
+    background-image: linear-gradient(to top,rgba(0,0,0,0.37),rgba(0,0,0,0.37)),url(../images/background/4.jpg);
     background-size: cover;
     background-position: center;
     transition: 2s ease;
@@ -171,10 +170,9 @@ li a:hover {  transform: scale(1.5);  }
 
 .logo {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    zoom: 300%;
-    transform: rotate(-2deg);
+    position: inherit;
+    zoom: 70%;
+    float: left;
 
 }
 /*NAPIS PROMUJACY*/
@@ -186,14 +184,14 @@ li a:hover {  transform: scale(1.5);  }
 }
 
 .slogan h1 {
-    color: red;
+    color: antiquewhite;
     font-size: 48px;
 }
 
 .slogan p {
     margin-top: 20px;
     font-size: 20px;
-    color: blue;
+    color: antiquewhite;
     font-weight: 300;
     line-height: 28px;
 }
