--- a/styles/main.css
+++ b/styles/main.css
@@ -95,7 +95,7 @@ body
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:forestgreen;
+    background-color: rgba(139,133,135,0.5);
 }
 
 li {
