--- a/styles/main.css
+++ b/styles/main.css
@@ -218,7 +218,7 @@ li a:hover {  transform: scale(1.5);  }
 }
 #footer
 {
-    width:99%;
+    /*width:99%;*/
     background-color: rgba(230, 230, 230, 0.4);
     margin-left: auto;
     margin-right: auto;
@@ -355,4 +355,20 @@ a.linksocial
     text-align: center;
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
+}
+
+#subscribe {
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 60px;
+    text-align: center;
+    width: 300px;
+    height: 60px;
+    border-radius: 30%;
+    opacity: 0.7;
+    background: linear-gradient(chocolate, lightsalmon);
+    font-size: 40px;
+    /*box-shadow: 50px 50px 5px grey;*/
+
+
 }
