--- a/styles/main.css
+++ b/styles/main.css
@@ -123,6 +123,8 @@ li {
 
 li a:hover {  transform: scale(1.5);  }
 
+.signup {text-align: center}
+
 .inputemail {
     width: 400px;
     height: 40px;
