--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 body
 {
     background-color: #f5f5f8;
-    margin: 0px;
 }
 
 #features {
@@ -67,6 +66,19 @@ body
     clear: both;
 }
 
+/*.team-members {*/
+    /*width: 300px;*/
+    /*background-color: #3B5998;*/
+/*}*/
+
+
+/*.team-float-left {*/
+    /*float: left;*/
+/*}*/
+
+/*.team-float-clear {*/
+    /*clear: both;*/
+/*}*/
 
 
 .navigation-nav {
@@ -85,7 +97,6 @@ body
     overflow: hidden;
     background-color: rgba(139,133,135,0.5);
 }
-
 
 li {
     float: left;
@@ -111,8 +122,6 @@ li {
 
 
 li a:hover {  transform: scale(1.5);  }
-
-.signup {text-align: center}
 
 .inputemail {
     width: 400px;
@@ -154,7 +163,7 @@ li a:hover {  transform: scale(1.5);  }
     transition: 2s ease;
     position: relative;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 800px;
 }
 
 /*MALY LOGOTYP SERWISU*/
@@ -169,16 +178,14 @@ li a:hover {  transform: scale(1.5);  }
 /*NAPIS PROMUJACY*/
 
 .slogan {
-    padding: 25% 10px 5%;
+    padding: 20% 10px 5%;
     text-align: center;
     position: relative;
 }
 
 .slogan h1 {
     color: antiquewhite;
-    font-weight:bold;
-    font-size: 58px;
-    /*font-family: "Courier 10 Pitch";*/
+    font-size: 48px;
 
 }
 
@@ -186,10 +193,8 @@ li a:hover {  transform: scale(1.5);  }
     margin-top: 20px;
     font-size: 20px;
     color: antiquewhite;
-    /*font-family: "Droid Arabic Naskh";*/
-    font-weight: lighter;
-    line-height: 31px;
-
+    font-weight: 300;
+    line-height: 28px;
 }
 /*PATRYK*/
 
@@ -213,17 +218,12 @@ li a:hover {  transform: scale(1.5);  }
 }
 #footer
 {
-    width:auto;
     background-color: rgba(230, 230, 230, 0.4);
     margin-left: auto;
     margin-right: auto;
-    /*height: 300px;*/
     text-align: center;
     padding: 20px;
-    /*position: relative;*/
-    /*right: 0;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
+
 
 }
 #socials
@@ -351,72 +351,29 @@ a.linksocial
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
 }
-#team {
-    /*background-color: rgba(0, 0, 0, 0.75);*/
-    padding: 0;
-    margin: 0;
-    color: #fff;
-    padding-top: 40px;
-}
-#team-section {
-     display: flex;
-     flex-wrap: wrap;
-     flex-direction: row;
-     justify-content: space-around;
- }
 
-.team-members {
-      flex: 1;
-      padding: 20px;
-      padding-top: 40px;
-      background-color: rgba(0, 0, 0, 0.6);
-      min-width: 250px;
-      max-width: 300px;
-      text-align: justify;
-  }
-
-.team-header {
-       text-align: center;
-       margin: 20px 0 20px;
-}
-
-.team-title {
+#subscribe {
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 60px;
     text-align: center;
-    padding: 0 50px 20px;
+    width: 300px;
+    height: 60px;
+    border-radius: 40%;
+    opacity: 0.3;
+    background: radial-gradient(darkgrey, #e3580d);
+    font-size: 40px;
+    box-shadow: 0px 0px 222px white;
+    color: white;
+    font-family: 'Courgette', cursive;
+
 }
 
-.team-name {
-    z-index: 2;
-    margin: auto;
-    text-align: center;
-    /*position:absolute;*/
-    top: 130px;
-    left: 0;
-    right:0;
-    opacity: 0.9;
-    padding-top: 10px;
- }
+{
 
-.team-foto {
-    display: block;
-    margin: auto;
-    width: 100%;
-    opacity: 0.1;
-    z-index: 1;
-    filter: grayscale(90%);
-    margin-bottom: 10px;
 }
-
-.team-foto:before {
-     /*opacity: 0.5;*/
-     /*background-color: #fff;*/
- }
-
-.team-foto:hover{
-      opacity: 0.5;
-      transition: opacity 2.9s;
-  }
-
-.team-foto:after { transition: opacity 3.9s ;
-
+#subscribe:hover
+{
+    opacity: 0.7;
+    text-decoration: none;
 }
