--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 body
 {
     background-color: #f5f5f8;
+    margin: 0px;
 }
 
 #features {
@@ -66,19 +67,6 @@ body
     clear: both;
 }
 
-/*.team-members {*/
-    /*width: 300px;*/
-    /*background-color: #3B5998;*/
-/*}*/
-
-
-/*.team-float-left {*/
-    /*float: left;*/
-/*}*/
-
-/*.team-float-clear {*/
-    /*clear: both;*/
-/*}*/
 
 
 .navigation-nav {
@@ -97,6 +85,7 @@ body
     overflow: hidden;
     background-color: rgba(139,133,135,0.5);
 }
+
 
 li {
     float: left;
@@ -122,6 +111,8 @@ li {
 
 
 li a:hover {  transform: scale(1.5);  }
+
+.signup {text-align: center}
 
 .inputemail {
     width: 400px;
@@ -163,7 +154,7 @@ li a:hover {  transform: scale(1.5);  }
     transition: 2s ease;
     position: relative;
     background-repeat: no-repeat;
-    height: 800px;
+    height: 100%;
 }
 
 /*MALY LOGOTYP SERWISU*/
@@ -178,14 +169,16 @@ li a:hover {  transform: scale(1.5);  }
 /*NAPIS PROMUJACY*/
 
 .slogan {
-    padding: 20% 10px 5%;
+    padding: 25% 10px 5%;
     text-align: center;
     position: relative;
 }
 
 .slogan h1 {
     color: antiquewhite;
-    font-size: 48px;
+    font-weight:bold;
+    font-size: 58px;
+    /*font-family: "Courier 10 Pitch";*/
 
 }
 
@@ -193,8 +186,10 @@ li a:hover {  transform: scale(1.5);  }
     margin-top: 20px;
     font-size: 20px;
     color: antiquewhite;
-    font-weight: 300;
-    line-height: 28px;
+    /*font-family: "Droid Arabic Naskh";*/
+    font-weight: lighter;
+    line-height: 31px;
+
 }
 /*PATRYK*/
 
@@ -218,12 +213,17 @@ li a:hover {  transform: scale(1.5);  }
 }
 #footer
 {
+    width:auto;
     background-color: rgba(230, 230, 230, 0.4);
     margin-left: auto;
     margin-right: auto;
+    /*height: 300px;*/
     text-align: center;
     padding: 20px;
-
+    /*position: relative;*/
+    /*right: 0;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
 
 }
 #socials
@@ -351,29 +351,72 @@ a.linksocial
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
 }
+#team {
+    /*background-color: rgba(0, 0, 0, 0.75);*/
+    padding: 0;
+    margin: 0;
+    color: #fff;
+    padding-top: 40px;
+}
+#team-section {
+     display: flex;
+     flex-wrap: wrap;
+     flex-direction: row;
+     justify-content: space-around;
+ }
 
-#subscribe {
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 60px;
+.team-members {
+      flex: 1;
+      padding: 20px;
+      padding-top: 40px;
+      background-color: rgba(0, 0, 0, 0.6);
+      min-width: 250px;
+      max-width: 300px;
+      text-align: justify;
+  }
+
+.team-header {
+       text-align: center;
+       margin: 20px 0 20px;
+}
+
+.team-title {
     text-align: center;
-    width: 300px;
-    height: 60px;
-    border-radius: 40%;
-    opacity: 0.3;
-    background: radial-gradient(darkgrey, #e3580d);
-    font-size: 40px;
-    box-shadow: 0px 0px 222px white;
-    color: white;
-    font-family: 'Courgette', cursive;
-
+    padding: 0 50px 20px;
 }
 
-{
+.team-name {
+    z-index: 2;
+    margin: auto;
+    text-align: center;
+    /*position:absolute;*/
+    top: 130px;
+    left: 0;
+    right:0;
+    opacity: 0.9;
+    padding-top: 10px;
+ }
 
+.team-foto {
+    display: block;
+    margin: auto;
+    width: 100%;
+    opacity: 0.1;
+    z-index: 1;
+    filter: grayscale(90%);
+    margin-bottom: 10px;
 }
-#subscribe:hover
-{
-    opacity: 0.7;
-    text-decoration: none;
+
+.team-foto:before {
+     /*opacity: 0.5;*/
+     /*background-color: #fff;*/
+ }
+
+.team-foto:hover{
+      opacity: 0.5;
+      transition: opacity 2.9s;
+  }
+
+.team-foto:after { transition: opacity 3.9s ;
+
 }
