--- a/styles/main.css
+++ b/styles/main.css
@@ -420,3 +420,29 @@ a.linksocial
 .team-foto:after { transition: opacity 3.9s ;
 
 }
+
+#subscribe {
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 60px;
+    text-align: center;
+    width: 300px;
+    height: 60px;
+    border-radius: 40%;
+    opacity: 0.3;
+    background: radial-gradient(darkgrey, #e3580d);
+    font-size: 40px;
+    box-shadow: 0px 0px 222px white;
+    color: white;
+    font-family: 'Courgette', cursive;
+
+}
+
+{
+
+}
+#subscribe:hover
+{
+    opacity: 0.7;
+    text-decoration: none;
+}
