--- a/styles/main.css
+++ b/styles/main.css
@@ -4,18 +4,24 @@ body
     margin: 0px;
 }
 
+
 #features {
-    display: block;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
     background-color: #f6f6f9;
     margin-top: 150px;
-    /*margin - pasek nawigacji od Piotra*/
     padding: 50px;
 }
 
-.features-feature{
+.features-feature {
     margin: 30px 30px 30px;
     padding: 15px;
     width: 40vw;
+}
+
+.features-line-break {
+    width: 100%
 }
 
 #features-suggestion {
@@ -57,18 +63,6 @@ body
     padding: 30px;
 }
 
-.features-float-right {
-    float: right;
-}
-.features-float-left {
-    float: left;
-}
-.features-float-clear {
-    clear: both;
-}
-
-
-
 .navigation-nav {
     position: fixed;
     top: 0;
@@ -76,7 +70,6 @@ body
     right: 0;
     z-index: 1;
 }
-
 
 .navigationul {
     list-style-type: none;
@@ -364,13 +357,14 @@ a.linksocial
     background-color: rgba(0, 0, 0, 0.55);
     color: #fff;
 }
+
 #team {
-    /*background-color: rgba(0, 0, 0, 0.75);*/
     padding: 0;
     margin: 0;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.88);
     padding-top: 40px;
 }
+
 #team-section {
      display: flex;
      flex-wrap: wrap;
@@ -379,18 +373,24 @@ a.linksocial
  }
 
 .team-members {
-      flex: 1;
-      padding: 20px;
-      padding-top: 40px;
-      background-color: rgba(0, 0, 0, 0.6);
-      min-width: 250px;
-      max-width: 300px;
-      text-align: justify;
+    flex: 1;
+    padding: 20px;
+    padding-top: 40px;
+    background-color: rgba(0, 0, 0, 0.6);
+    min-width: 250px;
+    max-width: 300px;
+    text-align: justify;
+    color: #fff;
   }
 
 .team-header {
-       text-align: center;
-       margin: 20px 0 20px;
+    text-align: center;
+    margin: 20px 0 20px;
+    color: rgba(0, 0, 0, 0.89);
+}
+
+.team-description {
+    color: rgba(0, 0, 0, 0.89);
 }
 
 .team-title {
