--- a/styles/main.css
+++ b/styles/main.css
@@ -173,7 +173,7 @@ li a:hover {  transform: scale(1.5);  }
     height: 100%;
 }
 
-/*MALY LOGOTYP SERWISU - usuniete niepotrzebne linie kodu*/
+/*MALY LOGOTYP SERWISU*/
 
 .logo {
     display: block;
@@ -187,7 +187,7 @@ li a:hover {  transform: scale(1.5);  }
 .slogan {
     padding: 25% 10px 5%;
     text-align: center;
-    font-style: italic; /
+    font-style: italic;
     position: relative;
 }
 
@@ -195,7 +195,6 @@ li a:hover {  transform: scale(1.5);  }
     color: antiquewhite;
     font-weight:bold;
     font-size: 48px;
-
 
 }
 
