--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,14 +1,14 @@
-a.linksocial
+a.footer-social-icons
 {
   color: black;
   text-decoration: none;
 }
 @each $nazwa1 in
-        yt,
-        fc,
-        gplus,
-        ins,
-        gmail,
+        footer-youtube-icon,
+        footer-facebook-icon,
+        footer-googleplus-icon,
+        footer-instagram-icon,
+        footer-gmail-icon,
 {  ##{$nazwa1}
 {
   float: left;
@@ -20,57 +20,58 @@ a.linksocial
 }
 }
 
-@mixin social-hover
+@mixin footer-social-icons-hover
 {
   color: white;
   transform: rotate(360deg);
 }
-#yt:hover
+#footer-youtube-icon:hover
 {
-  @include social-hover;
+  @include footer-social-icons-hover;
   background-color: #CC181E;
 }
-#fc:hover
+#footer-facebook-icon:hover
 {
-  @include social-hover;
+  @include footer-social-icons-hover;
   background-color: #3B5998;
 }
-#gplus:hover
+#footer-googleplus-icon:hover
 {
-  @include social-hover;
+  @include footer-social-icons-hover;
   background-color: #dd4b39;
 }
-#ins:hover
+#footer-instagram-icon:hover
 {
-  @include social-hover;
+  @include footer-social-icons-hover;
   background-color: #405de6;
 }
-#gmail:hover
+#footer-gmail-icon:hover
 {
-  @include social-hover;
+  @include footer-social-icons-hover;
   background-color: red;
 }
-@mixin foter-font
-{font-size: 20px; font-style: italic; text-align: left; color: black;}
-#be
+@mixin footer-font
+{font-size: 15px; font-style: italic; text-align: left; color: black;}
+#footer-poznajmy-text
 {
-  @include foter-font;
+  @include footer-font;
   float: left;
   margin-left: 10px;
 }
-#contact
+#footer-kontakt-text
 {
-  @include foter-font;
+  @include footer-font;
   float: right;
   margin-right: 10px;
 }
-#footer, #socials
+footer, #footer-socials-text
 {
-  padding: 20px;
+  padding-bottom: 8px;
 }
-#credits
+#footer-credits
 {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.55);
   color: #fff;
+  width: 100%;
 }
