--- a/styles/main.css
+++ b/styles/main.css
@@ -159,6 +159,8 @@ li a:hover {  transform: scale(1.5);  }
     top:1px;
 }
 
+
+/*PATRYK*/
 #intro
 {
 
@@ -170,7 +172,6 @@ li a:hover {  transform: scale(1.5);  }
     background-repeat: no-repeat;
     height: 100%;
 }
-
 
 .logo {
     display: block;
