--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,10 +1,8 @@
-footer
-{
+footer{
   background-color: rgba(253, 253, 253, 0.9);
-  padding-top: 20px;
+  padding: 20px 0 1px;
 }
-a.footer-social-icons
-{
+a.footer-social-icons{
   color: black;
   text-decoration: none;
 }
@@ -24,57 +22,43 @@ a.footer-social-icons
   transition:background-color 1500ms,  color 1500ms, transform 1500ms;
 }
 }
-
-@mixin footer-social-icons-hover
-{
+@mixin footer-social-icons-hover{
   color: white;
   transform: rotate(360deg);
 }
-#footer-youtube-icon:hover
-{
+#footer-youtube-icon:hover{
   @include footer-social-icons-hover;
   background-color: #CC181E;
 }
-#footer-facebook-icon:hover
-{
+#footer-facebook-icon:hover{
   @include footer-social-icons-hover;
   background-color: #3B5998;
 }
-#footer-googleplus-icon:hover
-{
+#footer-googleplus-icon:hover{
   @include footer-social-icons-hover;
   background-color: #dd4b39;
 }
-#footer-instagram-icon:hover
-{
+#footer-instagram-icon:hover{
   @include footer-social-icons-hover;
   background-color: #405de6;
 }
-#footer-gmail-icon:hover
-{
+#footer-gmail-icon:hover{
   @include footer-social-icons-hover;
   background-color: red;
 }
-@mixin footer-font
-{font-size: 15px; ; text-align: left; color: black;}
-#footer-poznajmy-text
-{
+@mixin footer-font{
+  font-size: 15px; ; text-align: left; color: black;}
+#footer-poznajmy-text{
   @include footer-font;
   float: left;
   margin-left: 10px;
 }
-#footer-kontakt-text
-{
+#footer-kontakt-text{
   @include footer-font;
   float: right;
   margin-right: 10px;
 }
-footer, #footer-socials-text
-{
-  padding-bottom: 1px;
-}
-#footer-credits
-{
+#footer-credits{
   text-align: center;
   background-color: #dfdfe2;
   color: black;
